tests/src/frontend/typechecking/invalid/typeclass_impl.sk
trait X
trait Y uses X
